# Ollama-Terminal-Agent

./: LICENSE  PromptBuilder.json  README.md  config.ini  main.py  pyproject.toml  temp.py
ota_utils/: config.py  thinking.py  tools.py
utils/: __init__.py  agentLogger.py  config.py  constants.py  messageBuilder.py  thinking.py  tools.py
