[project]
name = "terminal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "rich>=14.3.3",
    "textual>=8.1.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]

[tool.setuptools]
py-modules = ["main"]
packages = ["ota_utils"]

[project.scripts]
ollama-terminal-agent = "main:run"
ota = "main:run"
